<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/so"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Seasons">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/season_quiz_btn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/season_quiz_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kis_image" />

            <TextView
                android:id="@+id/kis_text"
                android:layout_width="270dp"
                android:layout_height="70dp"
                android:layout_marginTop="16dp"
                android:text="@string/kis_text"
                app:layout_constraintEnd_toStartOf="@+id/kis_image"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yaz_image" />

            <ImageView
                android:id="@+id/kis_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yaz_image"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/kis_1" />

            <TextView
                android:id="@+id/yaz_text"
                android:layout_width="270dp"
                android:layout_height="70dp"
                android:layout_marginTop="16dp"
                android:text="@string/yaz_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/yaz_image"
                app:layout_constraintTop_toBottomOf="@+id/sonbahar_image" />

            <TextView
                android:id="@+id/sonbahar_text"
                android:layout_width="270dp"
                android:layout_height="70dp"
                android:layout_marginTop="16dp"
                android:text="@string/sonbahar_text"
                app:layout_constraintEnd_toStartOf="@+id/sonbahar_image"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ilkbahar_image" />

            <ImageView
                android:id="@+id/sonbahar_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ilkbahar_image"
                app:srcCompat="@drawable/sonbahar_1" />

            <ImageView
                android:id="@+id/ilkbahar_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ilkbahar_1" />

            <TextView
                android:id="@+id/ilkbahar_text"
                android:layout_width="270dp"
                android:layout_height="70dp"
                android:layout_marginTop="16dp"
                android:text="@string/ilkbahar_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/ilkbahar_image"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/yaz_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sonbahar_image"
                app:srcCompat="@drawable/yaz_1" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>